--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,26 +1,28 @@
-# 今回使うDockerの参照元のイメージ
 FROM ruby:3.3.6
 
-# なんやかんやおまじない
 ENV LANG C.UTF-8
 ENV TZ Asia/Tokyo
 
-# node.jsやらyarnやらなんやらをシステム全体にインストール
+# 必要なパッケージをインストール
 RUN apt-get update -qq \
-&& apt-get install -y ca-certificates curl gnupg \
+&& apt-get install -y ca-certificates curl gnupg build-essential libpq-dev nodejs yarn vim \
 && mkdir -p /etc/apt/keyrings \
-&& curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg \
-&& NODE_MAJOR=20 \
-&& echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_$NODE_MAJOR.x nodistro main" | tee /etc/apt/sources.list.d/nodesource.list \
-&& wget --quiet -O - /tmp/pubkey.gpg https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - \
-&& echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
-RUN apt-get update -qq && apt-get install -y build-essential libpq-dev nodejs yarn vim
+&& curl -fsSL https://dl.yarnpkg.com/debian/pubkey.gpg | gpg --dearmor -o /etc/apt/keyrings/yarn.gpg \
+&& echo "deb [signed-by=/etc/apt/keyrings/yarn.gpg] https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list \
+&& apt-get update -qq && apt-get install -y yarn
 
-# ディレクトリを作成してそれを作業ディレクトリ（Dockerが操作するディレクトリ）に設定
+# アプリケーション用のディレクトリを作成
 RUN mkdir /myapp
 WORKDIR /myapp
-RUN gem install bundler
 
-# Dockerfileが存在するディレクトリ内（コンテナの外。今回の場合はRailsのアプリがあるディレクトリ）
-# にあるすべてのファイルとサブディレクトリをコンテナ内の/myappにコピー
+# 必要なGemとNode.jsパッケージをインストール
+COPY Gemfile* /myapp/
+RUN gem install bundler && bundle install
+COPY package.json yarn.lock /myapp/
+RUN yarn install
+
+# ソースコードをコピー
 COPY . /myapp
+
+# アセットをプリコンパイル
+RUN bundle exec rails assets:precompile
